--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 html {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #000000;
 }
 
 p {
     font-size: 1.25em;
-    color: #000000;
+    color: #fff;
 }
 
 figcaption, label, input, small {
@@ -15,8 +16,13 @@ nav a {
     font-size: 1.5em;
 }
 
+nav ul {
+    color: #fff;
+}
+
 h1 {
     font-size: 3em;
+    color: #007d7b;
 }
 
 h2 {
