--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
-body {
+html {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #000000;
+}
+
+body {
+    width: 485px;
+    margin: 0 auto;
 }
 
 p {
@@ -11,6 +16,18 @@ p {
 figcaption, label, input, small {
     font-size: 1em;
 }
+
+[href="#top"] {
+    position:fixed;
+    bottom:0px;
+    right:0px;
+    border-radius:8px 0 0px 0px;
+  }
+
+nav h2 {
+    visibility:hidden;
+    height:1px;
+  }
 
 nav a {
     font-size: 1.5em;
@@ -27,4 +44,34 @@ h1 {
 
 h2 {
     font-size: 2em;
+}
+
+figure {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+@media screen and (min-width: 880px) {
+    nav ul {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    
+    main {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+}
+    
+    
+@media screen and (min-width: 1300px) {
+    nav ul {
+        grid-template-columns: 1fr;
+        width: 1300px;
+        position: absolute;
+    }
+
+    main {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
